# 36_elemental-search

./: .gitignore  .slugignore  README.md  package-lock.json  package.json  pyproject.toml  review_candidates.csv  tsconfig.tsbuildinfo
.claude/commands/: commit.md
.claude/requirements/: Instruction minkou fix.md  react_design.md  schoolmatch.md
.claude/requirements/20260322.md/: 00_roadmap.md  02_review_keyword_search.md  03_school_distribution.md  04_school_name_search.md  05_ranking_weighted.md
.github/workflows/: fetch-locations.yml  scrape-gaccom.yml  scrape-kanto-aichi.yml  scrape-kanto.yml  scrape-pref.yml  scrape.yml
crawler/: app.py
crawler/scrapers/gaccom/: debug_pagination.py  run.py  scraper.py
crawler/scrapers/minkou/: fetch_locations.py  fix_prefecture.py  scraper.py  (+1 more)
crawler/scripts/: geocode_schools.py  match_schools.py
db/: add_geocoding.sql  create_tables.sql
db/check/: delete_wrong_links.sql  prefecture_normalization.sql
docs/: data-and-app-structure.md  workflows.md
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
memory/: MEMORY.md  project_structure.md
scrapers/gaccom/: scraper.py
scrapers/minkou/: fix_prefecture.py  load_to_supabase.py  run.py  scraper.py
scripts/: match_schools.py
src/app/: page.tsx
src/hooks/: useCityStats.ts  usePrefCities.ts  useRankingData.ts  useSchoolDistribution.ts  useSchoolSearch.ts
src/lib/: colors.ts  supabase.ts
src/store/: rankingStore.ts
src/types/: distribution.ts  ranking.ts  react-simple-maps.d.ts  school.ts
src/utils/: highlight.tsx
(+45 files in other folders)
